--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,9 @@ jspm_packages
 
 # Optional REPL history
 .node_repl_history
+
+# Don't include downloaded thumbnail files
+public/yt_data/*
+
+# Stupid Mac files
+.DS_Store
