--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "express-generator": "^4.13.4",
     "jade": "~1.11.0",
     "morgan": "^1.7.0",
+    "request": "^2.74.0",
     "serve-favicon": "^2.3.0"
   }
 }
